@@ -5,22 +5,15 @@ import com.github.zhangquanli.accounting.entity.SubjectBalance;
 import com.github.zhangquanli.accounting.query.AccountQuery;
 import com.github.zhangquanli.accounting.repository.AccountRepository;
 import com.github.zhangquanli.accounting.service.AccountService;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.persistence.criteria.Predicate;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
-import javax.persistence.EntityNotFoundException;
-import javax.persistence.criteria.Predicate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * 账簿服务类
- *
- * @author zhangquanli
- * @since 2021/12/22 10:40:00
- */
 @Service
 public class AccountServiceImpl implements AccountService {
     private final AccountRepository accountRepository;
@@ -61,7 +54,7 @@ public class AccountServiceImpl implements AccountService {
         List<SubjectBalance> subjectBalances = account.getSubjectBalances();
         List<Integer> subjectIds = subjectBalances.stream()
                 .map(subjectBalance -> subjectBalance.getSubject().getId())
-                .collect(Collectors.toList());
+                .toList();
         if (newAccount.getSubjectBalances() != null) {
             for (SubjectBalance subjectBalance : newAccount.getSubjectBalances()) {
                 if (subjectIds.contains(subjectBalance.getSubject().getId())) {
